Jool Configs Fixed
Jool files fixed as of right now to our knowledge

--- a/Gamedata/BlairsEVEAurora/Aurora.cfg
+++ b/Gamedata/BlairsEVEAurora/Aurora.cfg
@@ -252,6 +252,9 @@ EVE_CLOUDS
 					coverageCurve
 					{
 					}
+					densityCurve
+					{
+					}
 				}
 			}
 			lightVolumeSettings
@@ -262,7 +265,7 @@ EVE_CLOUDS
 			phaseFunctions
 			{
 			}
-    	}
+		}
 	}
 	OBJECT
 	{
@@ -275,7 +278,7 @@ EVE_CLOUDS
 		altitude = 130000
 		settings
 		{
-			_Color = 255,255,255,255
+                        _Color = 255,255,255,85
 			_DetailScale = 2
 			_DetailDist = 6E-09
 			_UVNoiseScale = 0.5
@@ -286,7 +289,7 @@ EVE_CLOUDS
 			}
 			_MainTex
 			{
-				value = GasAurora
+				value = JoolAurora
 				type = CubeMap
 			}
 			_UVNoiseTex
@@ -316,6 +319,9 @@ EVE_CLOUDS
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
