Urlum has been added
Its simple, Urlum has been added to the main repo

--- a/Gamedata/BlairsEVEAurora/EVE/Textures/Textures.cfg
+++ b/Gamedata/BlairsEVEAurora/EVE/Textures/Textures.cfg
@@ -97,3 +97,17 @@ EVE_TEXTURE_CONFIG
 		texYp = BlairsEVEAurora/EVE/Textures/Aurora/Neidon/NeidonAuroraYp_1
 		texZn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
 		texZp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+        }
+        OBJECT
+	{
+		name = UrlumAurora
+		type = TEX_CUBE_6
+		mipmaps = True
+		isReadable = True
+		isCompressed = True
+		texXn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texXp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texYn = BlairsEVEAurora/EVE/Textures/Aurora/Neidon/UrlumAuroraYn
+		texYp = BlairsEVEAurora/EVE/Textures/Aurora/Neidon/UrlumAuroraYp
+		texZn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texZp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
