--- a/Gamedata/BlairsEVEAurora/OPMAurora.cfg
+++ b/Gamedata/BlairsEVEAurora/OPMAurora.cfg
@@ -187,7 +187,7 @@ EVE_CLOUDS:NEEDS[OPM]
 		altitude = 100000
 		settings
 		{
-			_Color = 100,255,255,255
+			_Color = 255,255,255,255
 			_DetailScale = 2
 			_DetailDist = 6.4E-09
 			_UVNoiseScale = 0.77
@@ -198,7 +198,7 @@ EVE_CLOUDS:NEEDS[OPM]
 			}
 			_MainTex
 			{
-				value = GasAurora
+				value = UrlumAurora
 				type = CubeMap
 			}
 			_UVNoiseTex
