--- a/Gamedata/BlairsEVEAurora/OPMAurora.cfg
+++ b/Gamedata/BlairsEVEAurora/OPMAurora.cfg
@@ -1,4 +1,4 @@
-EVE_CLOUDS:NEEDS[OPM]
+EVE_CLOUDS
 {
 	OBJECT
 	{
@@ -11,12 +11,12 @@ EVE_CLOUDS:NEEDS[OPM]
 		altitude = 120000
 		settings
 		{
-			_Color = 255,255,255,255
 			_DetailScale = 2
 			_DetailDist = 6.4E-09
 			_UVNoiseScale = 0.77
 			_UVNoiseStrength = 0.05
 			_UVNoiseAnimation = 0.052,0.026
+			_Color = 255,255,255,50
 			_FlowMap
 			{
 			}
@@ -74,6 +74,9 @@ EVE_CLOUDS:NEEDS[OPM]
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
@@ -184,10 +187,9 @@ EVE_CLOUDS:NEEDS[OPM]
 		offset = 180,0,0
 		detailSpeed = 50,12000,0
 		killBodyRotation = True
-		altitude = 100000
+		altitude = 75000
 		settings
 		{
-			_Color = 255,255,255,255
 			_DetailScale = 2
 			_DetailDist = 6.4E-09
 			_UVNoiseScale = 0.77
@@ -252,6 +254,9 @@ EVE_CLOUDS:NEEDS[OPM]
 					coverageCurve
 					{
 					}
+					densityCurve
+					{
+					}
 				}
 			}
 			lightVolumeSettings
@@ -275,12 +280,12 @@ EVE_CLOUDS:NEEDS[OPM]
 		altitude = 105000
 		settings
 		{
-			_Color = 255,255,255,255
 			_DetailScale = 2
 			_DetailDist = 6.4E-09
 			_UVNoiseScale = 0.77
-			_UVNoiseStrength = 0.05
+			_UVNoiseStrength = 0.005
 			_UVNoiseAnimation = 0.052,0.026
+			_Color = 255,255,255,45
 			_FlowMap
 			{
 			}
@@ -338,6 +343,9 @@ EVE_CLOUDS:NEEDS[OPM]
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
