Added (some) Time values + more
Adjusted All aurora (most)
Time values for Jool and Laythe

--- a/Gamedata/BlairsEVEAurora/Aurora.cfg
+++ b/Gamedata/BlairsEVEAurora/Aurora.cfg
@@ -11,7 +11,7 @@ EVE_CLOUDS
 		offset = 180,0,0
 		settings
 		{
-			_Color = 255,255,255,165
+			_Color = 255,255,255,45
 			_DetailScale = 2
 			_DetailDist = 6E-09
 			_UVNoiseScale = 0.55
@@ -74,6 +74,9 @@ EVE_CLOUDS
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
@@ -162,6 +165,9 @@ EVE_CLOUDS
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
@@ -266,6 +272,12 @@ EVE_CLOUDS
 			{
 			}
 		}
+		timeSettings
+		{
+			duration = 191754
+			fadeTime = 60000
+			repeatInterval = 297794
+		}
 	}
 	OBJECT
 	{
@@ -278,7 +290,7 @@ EVE_CLOUDS
 		altitude = 130000
 		settings
 		{
-			_Color = 450,450,450,155
+			_Color = 450,450,450,250
 			_DetailScale = 2
 			_DetailDist = 6E-09
 			_UVNoiseScale = 0.5
@@ -340,6 +352,12 @@ EVE_CLOUDS
 			macroCloudMaterial
 			{
 			}
+		}
+		timeSettings
+		{
+			duration = 5400000
+			fadeTime = 135000
+			repeatInterval = 669600
 		}
 	}
 }
