--- a/Gamedata/BlairsEVEAurora/MPEAurora.cfg
+++ b/Gamedata/BlairsEVEAurora/MPEAurora.cfg
@@ -1,22 +1,22 @@
-EVE_CLOUDS:NEEDS[MPE]
+EVE_CLOUDS
 {
 	OBJECT
 	{
 		name = ErvoAurora
 		body = Ervo
-		speed = 0,-140,0
+		speed = 0,0,0
 		offset = 180,0,0
-		detailSpeed = 20,1000,0
+		detailSpeed = 10,10,0
 		killBodyRotation = True
 		altitude = 5000
 		settings
 		{
 			_DetailScale = 2
 			_DetailDist = 6E-09
-			_UVNoiseScale = 0.55
-			_UVNoiseStrength = 0.04
-			_UVNoiseAnimation = 0.04,0.01
-			_Color = 200,30,200,255
+			_UVNoiseScale = 0.15
+			_UVNoiseStrength = 0.08
+			_UVNoiseAnimation = 0.11,0.001
+			_Color = 200,30,200,5
 			_FlowMap
 			{
 			}
@@ -27,11 +27,11 @@ EVE_CLOUDS:NEEDS[MPE]
 			}
 			_UVNoiseTex
 			{
-				value = StockEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+				value = BlairsEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
 			}
 			_DetailTex
 			{
-				value = StockEVEAurora/EVE/Textures/_Detail/detailAurora
+				value = BlairsEVEAurora/EVE/Textures/_Detail/detailAurora
 			}
 		}
 		layer2D
@@ -74,6 +74,9 @@ EVE_CLOUDS:NEEDS[MPE]
 				Item
 				{
 					coverageCurve
+					{
+					}
+					densityCurve
 					{
 					}
 				}
