--- a/Gamedata/BlairsEVEAurora/OPMAurora.cfg
+++ b/Gamedata/BlairsEVEAurora/OPMAurora.cfg
@@ -195,6 +195,7 @@ EVE_CLOUDS
 			_UVNoiseScale = 0.77
 			_UVNoiseStrength = 0.05
 			_UVNoiseAnimation = 0.052,0.026
+			_Color = 255,255,255,75
 			_FlowMap
 			{
 			}
