Duna Auroras Added
Dunas Auroras have been made public, if there are any issues, let us know.

Due to limitations RN, they are at the Poles and not global, but realistically, they should be global

--- a/Gamedata/BlairsEVEAurora/Aurora.cfg
+++ b/Gamedata/BlairsEVEAurora/Aurora.cfg
@@ -360,4 +360,100 @@ EVE_CLOUDS
 			repeatInterval = 669600
 		}
 	}
+	OBJECT
+	{
+		name = DunaAurora
+		body = Duna
+		speed = 0,0,0
+		offset = 0,0,0
+		detailSpeed = 20,1000,0
+		killBodyRotation = True
+		altitude = 10500
+		settings
+		{
+			_Color = 255,255,255,25
+			_DetailScale = 2
+			_DetailDist = 6E-09
+			_UVNoiseScale = 0.5
+			_UVNoiseStrength = 0.04
+			_UVNoiseAnimation = 0.04,0.01
+			_FlowMap
+			{
+			}
+			_MainTex
+			{
+				value = DunaAurora
+				type = CubeMap
+			}
+			_UVNoiseTex
+			{
+				value = BlairsEVEAurora/EVE/Textures/_Detail/DetailUVNoise1
+			}
+			_DetailTex
+			{
+				value = BlairsEVEAurora/EVE/Textures/_Detail/detailAurora
+			}
+		}
+		layer2D
+		{
+			macroCloudMaterial
+			{
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
+				_MinLight = 1
+			}
+		}
+		layer2D
+		{
+			macroCloudMaterial
+			{
+				_RimDistSub = 0
+				_InvFade = 0
+				_RimDist = 0.1
+				_FalloffScale = 8
+				_MinLight = 1
+			}
+		}
+		layerRaymarchedVolumeV5
+		{
+			scaledFadeStartAltitude = -1000
+			scaledFadeEndAltitude = -100
+			noise
+			{
+			}
+			detailNoise
+			{
+			}
+			raymarchingSettings
+			{
+			}
+			cloudTypes
+			{
+				Item
+				{
+					coverageCurve
+					{
+					}
+					densityCurve
+					{
+					}
+				}
+			}
+			lightVolumeSettings
+			{
+				maxLightVolumeRadius = 671850
+				useLightVolume = False
+			}
+			phaseFunctions
+			{
+			}
+		}
+		timeSettings
+		{
+			duration = 191754
+			fadeTime = 60000
+			repeatInterval = 1597794
+		}
 }
