--- a/Gamedata/BlairsEVEAurora/EVE/Textures/Textures.cfg
+++ b/Gamedata/BlairsEVEAurora/EVE/Textures/Textures.cfg
@@ -112,4 +112,17 @@ EVE_TEXTURE_CONFIG
 		texZn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
 		texZp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
 	}
+}       OBJECT
+	{
+		name = DunaAurora
+		type = TEX_CUBE_6
+		mipmaps = True
+		isReadable = True
+		isCompressed = True
+		texXn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texXp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texYn = BlairsEVEAurora/EVE/Textures/Aurora/Duna/DunaAuroraYN
+		texYp = BlairsEVEAurora/EVE/Textures/Aurora/Duna/DunaYP
+		texZn = BlairsEVEAurora/EVE/Textures/_Detail/Empty
+		texZp = BlairsEVEAurora/EVE/Textures/_Detail/Empty
 }
